# web-app-media-hub

./: .gitignore  README.md
admin-portal/: README.md  index.html  package-lock.json  package.json  vite.config.ts
admin-portal/env/: .env.example
admin-portal/src/: index.css  main.tsx  router.tsx
catalog-service/: pom.xml
common/: .flattened-pom.xml  pom.xml
common/common-cache/: .flattened-pom.xml  pom.xml
common/common-cache-caffeine/: pom.xml
common/common-cache-core/: pom.xml
common/common-cache-redis/: pom.xml
common/common-cache-two-level/: pom.xml
common/common-file-azure-blob/: pom.xml
common/common-json/: pom.xml
config-proxy/: pom.xml
config-service/: pom.xml
core/: .flattened-pom.xml  pom.xml
form-service/: README.md  pom.xml
frontend/: README.md
gitops/: .gitignore  README-gitops.md  README.md  docker-compose.yml  secrets.env
gitops/spark/media-platform/: pyproject.toml
gitops/spark/media-platform/mediahub/: README.md  __init__.py  config.py  logging_utils.py  models.py  spark_app.py
gitops/spark/media-platform/mediahub/io/: __init__.py  iceberg_writer.py  source_reader.py
gitops/spark/media-platform/mediahub/jobs/: __init__.py  bronze_inventory_job.py  bronze_inventory_upscale_job.py  gold_catalog_publish_job.py  silver_probe_job.py
gitops/spark/media-platform/mediahub/ops/: __init__.py  audit.py  quality.py
gitops/spark/media-platform/mediahub/transforms/: __init__.py  bronze_inventory.py  silver_probe.py
parent/: .flattened-pom.xml  pom.xml
upload-service/: pom.xml
user-service/: .flattened-pom.xml  pom.xml
(+389 files in other folders)
