[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediahub"
version = "0.1.0"
description = "Media platform Spark jobs for Bronze, Silver, and Gold lakehouse pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mediahub*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]